# TableTracker

./: CMakeLists.txt  ConfigData.yml  ConfigData2.yml  ConfigData_test.yml  ConfigData_test2.yml  HYUMC.coord  TableCenter_OR.txt  camera2160.yml  kinect  kinect3072.yml  libjpeg-turbo  table_main.cc  test.coord
Coord/: 20210728_OR  20210730_LAB  20210930_OR  20210930_OR2
Coord/copy/: 20210804_LAB  playback_charucoData
include/: CharucoSync.hh  Functions.hh  Kinect.hh  TableTracker.hh
src/: CharucoSync.cc  Functions.cc  TableTracker.cc
